--- a/m/js/lib/weuijs/style/weuijs.css
+++ b/m/js/lib/weuijs/style/weuijs.css
@@ -3123,3 +3123,59 @@ a {
     z-index: 1;
     background: #fff;
 }
+/*自定义主题*/
+/*
+#04BE02
+#09BB07 #0c6
+#0BB20C
+#0D0D0D
+#10AEFF
+#179B16
+#1AAD19
+#1aad19
+#353535
+#3CC51F
+#52a341
+#586C94
+#808080
+#888888
+#999999
+#9B9B9B
+#9ED99D
+#ADADAD
+#B2B2B2
+#C0BFC4
+#C7C7C7
+#C8C8CD
+#C9C9C9
+#CCCCCC
+#CE3C39
+#CECECE
+#D1D1D1
+#D5D5D6
+#D7D6DC
+#D9D9D9
+#DEDEDE
+#DFDFDF
+#E1E1E1
+#E5E5E5
+#E64340
+#E6E6EA
+#E9E9E9
+#EAEAEA
+#EBEBEB
+#EC8B89
+#ECECEC
+#EDEDED
+#EEEEEE
+#EFEFF4
+#F43530
+#F76260
+#F7F7F7
+#F7F7FA
+#F8F8F8
+#FAFAFA
+#FDFDFD
+#FFBE00
+#fbf9fe
+*/
