--- a/m/js/lib/weuijs/style/weuijs.css
+++ b/m/js/lib/weuijs/style/weuijs.css
@@ -3109,7 +3109,7 @@ a {
     white-space: nowrap;
 }
 .select2 {
-    position: absolute;
+    position: fixed;
     top: 0;
     right: 0;
     bottom: 0;
