添加用户认证， 入网微调

--- a/m/css/ui-base.css
+++ b/m/css/ui-base.css
@@ -143,7 +143,8 @@ body {
 }
 
 .icon-location {
-    width: 18px;
-    height: 18px;
+	width: 28px;
+    height: 28px;
+	font-size: 23px;
     background-image: url('location.svg');
 }
